--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,12 @@
     box-sizing: border-box;
 }
 
-/* body{
-    background-color: violet;
-} */
+
 
 .container{
     width: 100%;
-    padding:15px;
+    padding:10px;
     border: 1px solid black;
-    max-width: 960px;
     margin: 0px auto;
 }
 
@@ -22,40 +19,78 @@
    
 }
 
-.col{
+ .col {
     width: 100%;
-    display:inline-block;
+    vertical-align: top;
+    display: inline-block;
     margin-right: -4px;
-    border: 1px solid purple;
-   
+    border: 1px solid red;
+}
 
+ .col-cl-1 {width: 8.33%;}
+ .col-cl-2 {width: 16.66%;}
+ .col-cl-3 {width: 25%;}
+ .col-cl-4 {width: 33.33%;}
+ .col-cl-5 {width: 41.66%;}
+ .col-cl-6 {width: 50%;}
+ .col-cl-7 {width: 58.33%;}
+ .col-cl-8 {width: 66.66%;}
+ .col-cl-9 {width: 75%;}
+ .col-cl-10 {width: 83.33%;}
+ .col-cl-11 {width: 91.66%;}
+ .col-cl-12 {width: 100%;}
+
+ /* tablet  */
+@media screen and (min-width:768px){
+
+    .col-tb-1 {width: 8.33%;}
+    .col-tb-2 {width: 16.66%;}
+    .col-tb-3 {width: 25%;}
+    .col-tb-4 {width: 33.33%;}
+    .col-tb-5 {width: 41.66%;}
+    .col-tb-6 {width: 50%;}
+    .col-tb-7 {width: 58.33%;}
+    .col-tb-8 {width: 66.66%;}
+    .col-tb-9 {width: 75%;}
+    .col-tb-10 {width: 83.33%;}
+    .col-tb-11 {width: 91.66%;}
+    .col-tb-12 {width: 100%;}
+}
+/* desktop  */
+@media screen and (min-width:992px){
+
+    .col-dk-1 {width: 8.33%;}
+    .col-dk-2 {width: 16.66%;}
+    .col-dk-3 {width: 25%;}
+    .col-dk-4 {width: 33.33%;}
+    .col-dk-5 {width: 41.66%;}
+    .col-dk-6 {width: 50%;}
+    .col-dk-7 {width: 58.33%;}
+    .col-dk-8 {width: 66.66%;}
+    .col-dk-9 {width: 75%;}
+    .col-dk-10 {width: 83.33%;}
+    .col-dk-11 {width: 91.66%;}
+    .col-dk-12 {width: 100%;}
 
 
 }
 
-.col-2{
-    width: 50%;
 
-}
-
-.col-3{
-    width:33.33%;
-}
-
-
-.col-4{
-    width: 25%;
-}
-
-@media screen and(min-width:992px){
-
-    .col-3{
-        width: 33.33%;
+/* telas largas  */
+@media screen and (min-width:1200px){
+    
+        .col-lg-1 {width: 8.33%;}
+        .col-lg-2 {width: 16.66%;}
+        .col-lg-3 {width: 25%;}
+        .col-lg-4 {width: 33.33%;}
+        .col-lg-5 {width: 41.66%;}
+        .col-lg-6 {width: 50%;}
+        .col-lg-7 {width: 58.33%;}
+        .col-lg-8 {width: 66.66%;}
+        .col-lg-9 {width: 75%;}
+        .col-lg-10 {width: 83.33%;}
+        .col-lg-11 {width: 91.66%;}
+        .col-lg-12 {width: 100%;}
+    
+    
     }
-
-    .col-4{
-        width: 25%;
-    }
-
-
-}
